package whiteboard;
syntax = "proto3";

enum MessageID {
    Start = 30000;
}

message CommandMessage {
    string command = 1;
}